src/objects/BOCA_To_Prospect__c.object
<CustomObject>
    <fields>
        <fullName>CorporatePayments_Application_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CorporatePayments Application Request</label>
        <referenceTo>CP_Application_Request__c</referenceTo>
        <relationshipLabel>BOCA To Prospect</relationshipLabel>
        <relationshipName>BOCA_To_Prospect</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Online_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Online Application</label>
        <referenceTo>OnlineApplication__c</referenceTo>
        <relationshipLabel>BOCA To Prospect</relationshipLabel>
        <relationshipName>BOCA_To_Prospect</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Reminder_OTR__c</fullName>
        <formula>HYPERLINK(&apos;/apex/OTRBOCAToProspect?bocaToProspectId=&apos; + Id, &apos;Send Reminder&apos;, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send Reminder (OTR)</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>